syntax = "proto3";
package rafaelsousa.realestate.realestate;

option go_package = "github.com/rafaelsousa/realestate/x/realestate/types";

message Inspection {
  uint64 id = 1;
  string inspector = 2; 
  string property = 3; 
  string fees = 4; 
  string inspectionResults = 5; 
  string creator = 6;
}