// Code generated by protoc-gen-gogo. DO NOT EDIT.
// source: realestate/locking.proto

package types

import (
	fmt "fmt"
	proto "github.com/gogo/protobuf/proto"
	io "io"
	math "math"
	math_bits "math/bits"
)

// Reference imports to suppress errors if they are not otherwise used.
var _ = proto.Marshal
var _ = fmt.Errorf
var _ = math.Inf

// This is a compile-time assertion to ensure that this generated file
// is compatible with the proto package it is being compiled against.
// A compilation error at this line likely means your copy of the
// proto package needs to be updated.
const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package

type Locking struct {
	Id            uint64 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	Owner         string `protobuf:"bytes,2,opt,name=owner,proto3" json:"owner,omitempty"`
	DateLocking   string `protobuf:"bytes,3,opt,name=dateLocking,proto3" json:"dateLocking,omitempty"`
	DateUnlocking string `protobuf:"bytes,4,opt,name=dateUnlocking,proto3" json:"dateUnlocking,omitempty"`
	UnlockFees    string `protobuf:"bytes,5,opt,name=unlockFees,proto3" json:"unlockFees,omitempty"`
	Property      string `protobuf:"bytes,6,opt,name=property,proto3" json:"property,omitempty"`
	Creator       string `protobuf:"bytes,7,opt,name=creator,proto3" json:"creator,omitempty"`
}

func (m *Locking) Reset()         { *m = Locking{} }
func (m *Locking) String() string { return proto.CompactTextString(m) }
func (*Locking) ProtoMessage()    {}
func (*Locking) Descriptor() ([]byte, []int) {
	return fileDescriptor_dc6bd36b084d77fa, []int{0}
}
func (m *Locking) XXX_Unmarshal(b []byte) error {
	return m.Unmarshal(b)
}
func (m *Locking) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
	if deterministic {
		return xxx_messageInfo_Locking.Marshal(b, m, deterministic)
	} else {
		b = b[:cap(b)]
		n, err := m.MarshalToSizedBuffer(b)
		if err != nil {
			return nil, err
		}
		return b[:n], nil
	}
}
func (m *Locking) XXX_Merge(src proto.Message) {
	xxx_messageInfo_Locking.Merge(m, src)
}
func (m *Locking) XXX_Size() int {
	return m.Size()
}
func (m *Locking) XXX_DiscardUnknown() {
	xxx_messageInfo_Locking.DiscardUnknown(m)
}

var xxx_messageInfo_Locking proto.InternalMessageInfo

func (m *Locking) GetId() uint64 {
	if m != nil {
		return m.Id
	}
	return 0
}

func (m *Locking) GetOwner() string {
	if m != nil {
		return m.Owner
	}
	return ""
}

func (m *Locking) GetDateLocking() string {
	if m != nil {
		return m.DateLocking
	}
	return ""
}

func (m *Locking) GetDateUnlocking() string {
	if m != nil {
		return m.DateUnlocking
	}
	return ""
}

func (m *Locking) GetUnlockFees() string {
	if m != nil {
		return m.UnlockFees
	}
	return ""
}

func (m *Locking) GetProperty() string {
	if m != nil {
		return m.Property
	}
	return ""
}

func (m *Locking) GetCreator() string {
	if m != nil {
		return m.Creator
	}
	return ""
}

func init() {
	proto.RegisterType((*Locking)(nil), "rafaelsousa.realestate.realestate.Locking")
}

func init() { proto.RegisterFile("realestate/locking.proto", fileDescriptor_dc6bd36b084d77fa) }

var fileDescriptor_dc6bd36b084d77fa = []byte{
	// 251 bytes of a gzipped FileDescriptorProto
	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x54, 0x90, 0xbf, 0x4e, 0xc3, 0x30,
	0x10, 0xc6, 0xe3, 0xd0, 0x36, 0x70, 0x08, 0x06, 0x8b, 0xe1, 0xc4, 0x60, 0x05, 0xc4, 0xd0, 0x29,
	0x19, 0xe0, 0x09, 0x18, 0x98, 0x10, 0x43, 0x25, 0x16, 0x36, 0x37, 0x39, 0x4a, 0x44, 0x88, 0x23,
	0xfb, 0x22, 0xe8, 0x5b, 0xf0, 0x58, 0x2c, 0x48, 0x1d, 0x19, 0x51, 0xf2, 0x22, 0x08, 0x37, 0x80,
	0xd9, 0xee, 0xf7, 0xfd, 0x91, 0x4e, 0x1f, 0xa0, 0x25, 0x5d, 0x93, 0x63, 0xcd, 0x94, 0xd7, 0xa6,
	0x78, 0xac, 0x9a, 0x55, 0xd6, 0x5a, 0xc3, 0x46, 0x9e, 0x58, 0x7d, 0xaf, 0xa9, 0x76, 0xa6, 0x73,
	0x3a, 0xfb, 0x4b, 0x05, 0xe7, 0xe9, 0xbb, 0x80, 0xe4, 0x7a, 0x5b, 0x92, 0x87, 0x10, 0x57, 0x25,
	0x8a, 0x54, 0xcc, 0x27, 0x8b, 0xb8, 0x2a, 0xe5, 0x11, 0x4c, 0xcd, 0x73, 0x43, 0x16, 0xe3, 0x54,
	0xcc, 0xf7, 0x16, 0x5b, 0x90, 0x29, 0xec, 0x97, 0x9a, 0x69, 0x2c, 0xe1, 0x8e, 0xf7, 0x42, 0x49,
	0x9e, 0xc1, 0xc1, 0x37, 0xde, 0x36, 0xe3, 0x37, 0x38, 0xf1, 0x99, 0xff, 0xa2, 0x54, 0x00, 0x9d,
	0x87, 0x2b, 0x22, 0x87, 0x53, 0x1f, 0x09, 0x14, 0x79, 0x0c, 0xbb, 0xad, 0x35, 0x2d, 0x59, 0x5e,
	0xe3, 0xcc, 0xbb, 0xbf, 0x2c, 0x11, 0x92, 0xc2, 0x92, 0x66, 0x63, 0x31, 0xf1, 0xd6, 0x0f, 0x5e,
	0xde, 0xbc, 0xf5, 0x4a, 0x6c, 0x7a, 0x25, 0x3e, 0x7b, 0x25, 0x5e, 0x07, 0x15, 0x6d, 0x06, 0x15,
	0x7d, 0x0c, 0x2a, 0xba, 0xbb, 0x58, 0x55, 0xfc, 0xd0, 0x2d, 0xb3, 0xc2, 0x3c, 0xe5, 0xc1, 0x2e,
	0x79, 0xb0, 0xde, 0x4b, 0x08, 0xbc, 0x6e, 0xc9, 0x2d, 0x67, 0x7e, 0xc9, 0xf3, 0xaf, 0x00, 0x00,
	0x00, 0xff, 0xff, 0x41, 0xd9, 0x6d, 0x31, 0x65, 0x01, 0x00, 0x00,
}

func (m *Locking) Marshal() (dAtA []byte, err error) {
	size := m.Size()
	dAtA = make([]byte, size)
	n, err := m.MarshalToSizedBuffer(dAtA[:size])
	if err != nil {
		return nil, err
	}
	return dAtA[:n], nil
}

func (m *Locking) MarshalTo(dAtA []byte) (int, error) {
	size := m.Size()
	return m.MarshalToSizedBuffer(dAtA[:size])
}

func (m *Locking) MarshalToSizedBuffer(dAtA []byte) (int, error) {
	i := len(dAtA)
	_ = i
	var l int
	_ = l
	if len(m.Creator) > 0 {
		i -= len(m.Creator)
		copy(dAtA[i:], m.Creator)
		i = encodeVarintLocking(dAtA, i, uint64(len(m.Creator)))
		i--
		dAtA[i] = 0x3a
	}
	if len(m.Property) > 0 {
		i -= len(m.Property)
		copy(dAtA[i:], m.Property)
		i = encodeVarintLocking(dAtA, i, uint64(len(m.Property)))
		i--
		dAtA[i] = 0x32
	}
	if len(m.UnlockFees) > 0 {
		i -= len(m.UnlockFees)
		copy(dAtA[i:], m.UnlockFees)
		i = encodeVarintLocking(dAtA, i, uint64(len(m.UnlockFees)))
		i--
		dAtA[i] = 0x2a
	}
	if len(m.DateUnlocking) > 0 {
		i -= len(m.DateUnlocking)
		copy(dAtA[i:], m.DateUnlocking)
		i = encodeVarintLocking(dAtA, i, uint64(len(m.DateUnlocking)))
		i--
		dAtA[i] = 0x22
	}
	if len(m.DateLocking) > 0 {
		i -= len(m.DateLocking)
		copy(dAtA[i:], m.DateLocking)
		i = encodeVarintLocking(dAtA, i, uint64(len(m.DateLocking)))
		i--
		dAtA[i] = 0x1a
	}
	if len(m.Owner) > 0 {
		i -= len(m.Owner)
		copy(dAtA[i:], m.Owner)
		i = encodeVarintLocking(dAtA, i, uint64(len(m.Owner)))
		i--
		dAtA[i] = 0x12
	}
	if m.Id != 0 {
		i = encodeVarintLocking(dAtA, i, uint64(m.Id))
		i--
		dAtA[i] = 0x8
	}
	return len(dAtA) - i, nil
}

func encodeVarintLocking(dAtA []byte, offset int, v uint64) int {
	offset -= sovLocking(v)
	base := offset
	for v >= 1<<7 {
		dAtA[offset] = uint8(v&0x7f | 0x80)
		v >>= 7
		offset++
	}
	dAtA[offset] = uint8(v)
	return base
}
func (m *Locking) Size() (n int) {
	if m == nil {
		return 0
	}
	var l int
	_ = l
	if m.Id != 0 {
		n += 1 + sovLocking(uint64(m.Id))
	}
	l = len(m.Owner)
	if l > 0 {
		n += 1 + l + sovLocking(uint64(l))
	}
	l = len(m.DateLocking)
	if l > 0 {
		n += 1 + l + sovLocking(uint64(l))
	}
	l = len(m.DateUnlocking)
	if l > 0 {
		n += 1 + l + sovLocking(uint64(l))
	}
	l = len(m.UnlockFees)
	if l > 0 {
		n += 1 + l + sovLocking(uint64(l))
	}
	l = len(m.Property)
	if l > 0 {
		n += 1 + l + sovLocking(uint64(l))
	}
	l = len(m.Creator)
	if l > 0 {
		n += 1 + l + sovLocking(uint64(l))
	}
	return n
}

func sovLocking(x uint64) (n int) {
	return (math_bits.Len64(x|1) + 6) / 7
}
func sozLocking(x uint64) (n int) {
	return sovLocking(uint64((x << 1) ^ uint64((int64(x) >> 63))))
}
func (m *Locking) Unmarshal(dAtA []byte) error {
	l := len(dAtA)
	iNdEx := 0
	for iNdEx < l {
		preIndex := iNdEx
		var wire uint64
		for shift := uint(0); ; shift += 7 {
			if shift >= 64 {
				return ErrIntOverflowLocking
			}
			if iNdEx >= l {
				return io.ErrUnexpectedEOF
			}
			b := dAtA[iNdEx]
			iNdEx++
			wire |= uint64(b&0x7F) << shift
			if b < 0x80 {
				break
			}
		}
		fieldNum := int32(wire >> 3)
		wireType := int(wire & 0x7)
		if wireType == 4 {
			return fmt.Errorf("proto: Locking: wiretype end group for non-group")
		}
		if fieldNum <= 0 {
			return fmt.Errorf("proto: Locking: illegal tag %d (wire type %d)", fieldNum, wire)
		}
		switch fieldNum {
		case 1:
			if wireType != 0 {
				return fmt.Errorf("proto: wrong wireType = %d for field Id", wireType)
			}
			m.Id = 0
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowLocking
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				m.Id |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
		case 2:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field Owner", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowLocking
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthLocking
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthLocking
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.Owner = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 3:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field DateLocking", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowLocking
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthLocking
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthLocking
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.DateLocking = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 4:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field DateUnlocking", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowLocking
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthLocking
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthLocking
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.DateUnlocking = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 5:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field UnlockFees", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowLocking
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthLocking
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthLocking
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.UnlockFees = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 6:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field Property", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowLocking
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthLocking
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthLocking
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.Property = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 7:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field Creator", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowLocking
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthLocking
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthLocking
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.Creator = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		default:
			iNdEx = preIndex
			skippy, err := skipLocking(dAtA[iNdEx:])
			if err != nil {
				return err
			}
			if (skippy < 0) || (iNdEx+skippy) < 0 {
				return ErrInvalidLengthLocking
			}
			if (iNdEx + skippy) > l {
				return io.ErrUnexpectedEOF
			}
			iNdEx += skippy
		}
	}

	if iNdEx > l {
		return io.ErrUnexpectedEOF
	}
	return nil
}
func skipLocking(dAtA []byte) (n int, err error) {
	l := len(dAtA)
	iNdEx := 0
	depth := 0
	for iNdEx < l {
		var wire uint64
		for shift := uint(0); ; shift += 7 {
			if shift >= 64 {
				return 0, ErrIntOverflowLocking
			}
			if iNdEx >= l {
				return 0, io.ErrUnexpectedEOF
			}
			b := dAtA[iNdEx]
			iNdEx++
			wire |= (uint64(b) & 0x7F) << shift
			if b < 0x80 {
				break
			}
		}
		wireType := int(wire & 0x7)
		switch wireType {
		case 0:
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return 0, ErrIntOverflowLocking
				}
				if iNdEx >= l {
					return 0, io.ErrUnexpectedEOF
				}
				iNdEx++
				if dAtA[iNdEx-1] < 0x80 {
					break
				}
			}
		case 1:
			iNdEx += 8
		case 2:
			var length int
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return 0, ErrIntOverflowLocking
				}
				if iNdEx >= l {
					return 0, io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				length |= (int(b) & 0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			if length < 0 {
				return 0, ErrInvalidLengthLocking
			}
			iNdEx += length
		case 3:
			depth++
		case 4:
			if depth == 0 {
				return 0, ErrUnexpectedEndOfGroupLocking
			}
			depth--
		case 5:
			iNdEx += 4
		default:
			return 0, fmt.Errorf("proto: illegal wireType %d", wireType)
		}
		if iNdEx < 0 {
			return 0, ErrInvalidLengthLocking
		}
		if depth == 0 {
			return iNdEx, nil
		}
	}
	return 0, io.ErrUnexpectedEOF
}

var (
	ErrInvalidLengthLocking        = fmt.Errorf("proto: negative length found during unmarshaling")
	ErrIntOverflowLocking          = fmt.Errorf("proto: integer overflow")
	ErrUnexpectedEndOfGroupLocking = fmt.Errorf("proto: unexpected end of group")
)
