// Code generated by protoc-gen-gogo. DO NOT EDIT.
// source: realestate/property.proto

package types

import (
	fmt "fmt"
	proto "github.com/gogo/protobuf/proto"
	io "io"
	math "math"
	math_bits "math/bits"
)

// Reference imports to suppress errors if they are not otherwise used.
var _ = proto.Marshal
var _ = fmt.Errorf
var _ = math.Inf

// This is a compile-time assertion to ensure that this generated file
// is compatible with the proto package it is being compiled against.
// A compilation error at this line likely means your copy of the
// proto package needs to be updated.
const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package

type Property struct {
	Id        uint64 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	Address   string `protobuf:"bytes,2,opt,name=address,proto3" json:"address,omitempty"`
	City      string `protobuf:"bytes,3,opt,name=city,proto3" json:"city,omitempty"`
	State     string `protobuf:"bytes,4,opt,name=state,proto3" json:"state,omitempty"`
	Country   string `protobuf:"bytes,5,opt,name=country,proto3" json:"country,omitempty"`
	Zipcode   string `protobuf:"bytes,6,opt,name=zipcode,proto3" json:"zipcode,omitempty"`
	Latitude  string `protobuf:"bytes,7,opt,name=latitude,proto3" json:"latitude,omitempty"`
	Longitude string `protobuf:"bytes,8,opt,name=longitude,proto3" json:"longitude,omitempty"`
	Creator   string `protobuf:"bytes,9,opt,name=creator,proto3" json:"creator,omitempty"`
	Blueprint string `protobuf:"bytes,10,opt,name=blueprint,proto3" json:"blueprint,omitempty"`
	ImgUrl    string `protobuf:"bytes,11,opt,name=imgUrl,proto3" json:"imgUrl,omitempty"`
}

func (m *Property) Reset()         { *m = Property{} }
func (m *Property) String() string { return proto.CompactTextString(m) }
func (*Property) ProtoMessage()    {}
func (*Property) Descriptor() ([]byte, []int) {
	return fileDescriptor_766d12050d177434, []int{0}
}
func (m *Property) XXX_Unmarshal(b []byte) error {
	return m.Unmarshal(b)
}
func (m *Property) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
	if deterministic {
		return xxx_messageInfo_Property.Marshal(b, m, deterministic)
	} else {
		b = b[:cap(b)]
		n, err := m.MarshalToSizedBuffer(b)
		if err != nil {
			return nil, err
		}
		return b[:n], nil
	}
}
func (m *Property) XXX_Merge(src proto.Message) {
	xxx_messageInfo_Property.Merge(m, src)
}
func (m *Property) XXX_Size() int {
	return m.Size()
}
func (m *Property) XXX_DiscardUnknown() {
	xxx_messageInfo_Property.DiscardUnknown(m)
}

var xxx_messageInfo_Property proto.InternalMessageInfo

func (m *Property) GetId() uint64 {
	if m != nil {
		return m.Id
	}
	return 0
}

func (m *Property) GetAddress() string {
	if m != nil {
		return m.Address
	}
	return ""
}

func (m *Property) GetCity() string {
	if m != nil {
		return m.City
	}
	return ""
}

func (m *Property) GetState() string {
	if m != nil {
		return m.State
	}
	return ""
}

func (m *Property) GetCountry() string {
	if m != nil {
		return m.Country
	}
	return ""
}

func (m *Property) GetZipcode() string {
	if m != nil {
		return m.Zipcode
	}
	return ""
}

func (m *Property) GetLatitude() string {
	if m != nil {
		return m.Latitude
	}
	return ""
}

func (m *Property) GetLongitude() string {
	if m != nil {
		return m.Longitude
	}
	return ""
}

func (m *Property) GetCreator() string {
	if m != nil {
		return m.Creator
	}
	return ""
}

func (m *Property) GetBlueprint() string {
	if m != nil {
		return m.Blueprint
	}
	return ""
}

func (m *Property) GetImgUrl() string {
	if m != nil {
		return m.ImgUrl
	}
	return ""
}

func init() {
	proto.RegisterType((*Property)(nil), "rafaelsousa.realestate.realestate.Property")
}

func init() { proto.RegisterFile("realestate/property.proto", fileDescriptor_766d12050d177434) }

var fileDescriptor_766d12050d177434 = []byte{
	// 291 bytes of a gzipped FileDescriptorProto
	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x4c, 0x91, 0x4f, 0x4a, 0xc4, 0x30,
	0x14, 0x87, 0x27, 0x75, 0xfe, 0x46, 0x70, 0x11, 0x44, 0xa2, 0x48, 0x18, 0x5d, 0xcd, 0xaa, 0x5d,
	0xe8, 0x09, 0x3c, 0x80, 0xc8, 0x80, 0x1b, 0x77, 0x69, 0x13, 0x6b, 0x20, 0xd3, 0x84, 0xe4, 0x15,
	0xac, 0xa7, 0xf0, 0x00, 0x1e, 0xc8, 0xe5, 0x2c, 0x5d, 0x4a, 0x7b, 0x11, 0x69, 0x52, 0x67, 0xba,
	0x7b, 0xdf, 0xef, 0xcb, 0x7b, 0x0f, 0xf2, 0xf0, 0xa5, 0x93, 0x5c, 0x4b, 0x0f, 0x1c, 0x64, 0x66,
	0x9d, 0xb1, 0xd2, 0x41, 0x93, 0x5a, 0x67, 0xc0, 0x90, 0x1b, 0xc7, 0x5f, 0xb9, 0xd4, 0xde, 0xd4,
	0x9e, 0xa7, 0xc7, 0x67, 0xa3, 0xf2, 0xf6, 0x2b, 0xc1, 0xcb, 0xa7, 0xa1, 0x8b, 0x9c, 0xe1, 0x44,
	0x09, 0x8a, 0xd6, 0x68, 0x33, 0xdd, 0x26, 0x4a, 0x10, 0x8a, 0x17, 0x5c, 0x08, 0x27, 0xbd, 0xa7,
	0xc9, 0x1a, 0x6d, 0x56, 0xdb, 0x7f, 0x24, 0x04, 0x4f, 0x0b, 0x05, 0x0d, 0x3d, 0x09, 0x71, 0xa8,
	0xc9, 0x39, 0x9e, 0x85, 0x99, 0x74, 0x1a, 0xc2, 0x08, 0xfd, 0x8c, 0xc2, 0xd4, 0x15, 0xb8, 0x86,
	0xce, 0xe2, 0x8c, 0x01, 0x7b, 0xf3, 0xa1, 0x6c, 0x61, 0x84, 0xa4, 0xf3, 0x68, 0x06, 0x24, 0x57,
	0x78, 0xa9, 0x39, 0x28, 0xa8, 0x85, 0xa4, 0x8b, 0xa0, 0x0e, 0x4c, 0xae, 0xf1, 0x4a, 0x9b, 0xaa,
	0x8c, 0x72, 0x19, 0xe4, 0x31, 0x08, 0xdb, 0x9c, 0xe4, 0x60, 0x1c, 0x5d, 0x0d, 0xdb, 0x22, 0xf6,
	0x7d, 0xb9, 0xae, 0xa5, 0x75, 0xaa, 0x02, 0x8a, 0x63, 0xdf, 0x21, 0x20, 0x17, 0x78, 0xae, 0x76,
	0xe5, 0xb3, 0xd3, 0xf4, 0x34, 0xa8, 0x81, 0x1e, 0x1e, 0xbf, 0x5b, 0x86, 0xf6, 0x2d, 0x43, 0xbf,
	0x2d, 0x43, 0x9f, 0x1d, 0x9b, 0xec, 0x3b, 0x36, 0xf9, 0xe9, 0xd8, 0xe4, 0xe5, 0xbe, 0x54, 0xf0,
	0x56, 0xe7, 0x69, 0x61, 0x76, 0xd9, 0xe8, 0x9b, 0xb3, 0xd1, 0x35, 0xde, 0xc7, 0x00, 0x8d, 0x95,
	0x3e, 0x9f, 0x87, 0xc3, 0xdc, 0xfd, 0x05, 0x00, 0x00, 0xff, 0xff, 0xad, 0xaf, 0x1a, 0x75, 0xb5,
	0x01, 0x00, 0x00,
}

func (m *Property) Marshal() (dAtA []byte, err error) {
	size := m.Size()
	dAtA = make([]byte, size)
	n, err := m.MarshalToSizedBuffer(dAtA[:size])
	if err != nil {
		return nil, err
	}
	return dAtA[:n], nil
}

func (m *Property) MarshalTo(dAtA []byte) (int, error) {
	size := m.Size()
	return m.MarshalToSizedBuffer(dAtA[:size])
}

func (m *Property) MarshalToSizedBuffer(dAtA []byte) (int, error) {
	i := len(dAtA)
	_ = i
	var l int
	_ = l
	if len(m.ImgUrl) > 0 {
		i -= len(m.ImgUrl)
		copy(dAtA[i:], m.ImgUrl)
		i = encodeVarintProperty(dAtA, i, uint64(len(m.ImgUrl)))
		i--
		dAtA[i] = 0x5a
	}
	if len(m.Blueprint) > 0 {
		i -= len(m.Blueprint)
		copy(dAtA[i:], m.Blueprint)
		i = encodeVarintProperty(dAtA, i, uint64(len(m.Blueprint)))
		i--
		dAtA[i] = 0x52
	}
	if len(m.Creator) > 0 {
		i -= len(m.Creator)
		copy(dAtA[i:], m.Creator)
		i = encodeVarintProperty(dAtA, i, uint64(len(m.Creator)))
		i--
		dAtA[i] = 0x4a
	}
	if len(m.Longitude) > 0 {
		i -= len(m.Longitude)
		copy(dAtA[i:], m.Longitude)
		i = encodeVarintProperty(dAtA, i, uint64(len(m.Longitude)))
		i--
		dAtA[i] = 0x42
	}
	if len(m.Latitude) > 0 {
		i -= len(m.Latitude)
		copy(dAtA[i:], m.Latitude)
		i = encodeVarintProperty(dAtA, i, uint64(len(m.Latitude)))
		i--
		dAtA[i] = 0x3a
	}
	if len(m.Zipcode) > 0 {
		i -= len(m.Zipcode)
		copy(dAtA[i:], m.Zipcode)
		i = encodeVarintProperty(dAtA, i, uint64(len(m.Zipcode)))
		i--
		dAtA[i] = 0x32
	}
	if len(m.Country) > 0 {
		i -= len(m.Country)
		copy(dAtA[i:], m.Country)
		i = encodeVarintProperty(dAtA, i, uint64(len(m.Country)))
		i--
		dAtA[i] = 0x2a
	}
	if len(m.State) > 0 {
		i -= len(m.State)
		copy(dAtA[i:], m.State)
		i = encodeVarintProperty(dAtA, i, uint64(len(m.State)))
		i--
		dAtA[i] = 0x22
	}
	if len(m.City) > 0 {
		i -= len(m.City)
		copy(dAtA[i:], m.City)
		i = encodeVarintProperty(dAtA, i, uint64(len(m.City)))
		i--
		dAtA[i] = 0x1a
	}
	if len(m.Address) > 0 {
		i -= len(m.Address)
		copy(dAtA[i:], m.Address)
		i = encodeVarintProperty(dAtA, i, uint64(len(m.Address)))
		i--
		dAtA[i] = 0x12
	}
	if m.Id != 0 {
		i = encodeVarintProperty(dAtA, i, uint64(m.Id))
		i--
		dAtA[i] = 0x8
	}
	return len(dAtA) - i, nil
}

func encodeVarintProperty(dAtA []byte, offset int, v uint64) int {
	offset -= sovProperty(v)
	base := offset
	for v >= 1<<7 {
		dAtA[offset] = uint8(v&0x7f | 0x80)
		v >>= 7
		offset++
	}
	dAtA[offset] = uint8(v)
	return base
}
func (m *Property) Size() (n int) {
	if m == nil {
		return 0
	}
	var l int
	_ = l
	if m.Id != 0 {
		n += 1 + sovProperty(uint64(m.Id))
	}
	l = len(m.Address)
	if l > 0 {
		n += 1 + l + sovProperty(uint64(l))
	}
	l = len(m.City)
	if l > 0 {
		n += 1 + l + sovProperty(uint64(l))
	}
	l = len(m.State)
	if l > 0 {
		n += 1 + l + sovProperty(uint64(l))
	}
	l = len(m.Country)
	if l > 0 {
		n += 1 + l + sovProperty(uint64(l))
	}
	l = len(m.Zipcode)
	if l > 0 {
		n += 1 + l + sovProperty(uint64(l))
	}
	l = len(m.Latitude)
	if l > 0 {
		n += 1 + l + sovProperty(uint64(l))
	}
	l = len(m.Longitude)
	if l > 0 {
		n += 1 + l + sovProperty(uint64(l))
	}
	l = len(m.Creator)
	if l > 0 {
		n += 1 + l + sovProperty(uint64(l))
	}
	l = len(m.Blueprint)
	if l > 0 {
		n += 1 + l + sovProperty(uint64(l))
	}
	l = len(m.ImgUrl)
	if l > 0 {
		n += 1 + l + sovProperty(uint64(l))
	}
	return n
}

func sovProperty(x uint64) (n int) {
	return (math_bits.Len64(x|1) + 6) / 7
}
func sozProperty(x uint64) (n int) {
	return sovProperty(uint64((x << 1) ^ uint64((int64(x) >> 63))))
}
func (m *Property) Unmarshal(dAtA []byte) error {
	l := len(dAtA)
	iNdEx := 0
	for iNdEx < l {
		preIndex := iNdEx
		var wire uint64
		for shift := uint(0); ; shift += 7 {
			if shift >= 64 {
				return ErrIntOverflowProperty
			}
			if iNdEx >= l {
				return io.ErrUnexpectedEOF
			}
			b := dAtA[iNdEx]
			iNdEx++
			wire |= uint64(b&0x7F) << shift
			if b < 0x80 {
				break
			}
		}
		fieldNum := int32(wire >> 3)
		wireType := int(wire & 0x7)
		if wireType == 4 {
			return fmt.Errorf("proto: Property: wiretype end group for non-group")
		}
		if fieldNum <= 0 {
			return fmt.Errorf("proto: Property: illegal tag %d (wire type %d)", fieldNum, wire)
		}
		switch fieldNum {
		case 1:
			if wireType != 0 {
				return fmt.Errorf("proto: wrong wireType = %d for field Id", wireType)
			}
			m.Id = 0
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				m.Id |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
		case 2:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field Address", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthProperty
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthProperty
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.Address = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 3:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field City", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthProperty
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthProperty
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.City = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 4:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field State", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthProperty
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthProperty
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.State = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 5:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field Country", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthProperty
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthProperty
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.Country = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 6:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field Zipcode", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthProperty
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthProperty
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.Zipcode = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 7:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field Latitude", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthProperty
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthProperty
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.Latitude = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 8:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field Longitude", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthProperty
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthProperty
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.Longitude = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 9:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field Creator", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthProperty
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthProperty
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.Creator = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 10:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field Blueprint", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthProperty
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthProperty
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.Blueprint = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		case 11:
			if wireType != 2 {
				return fmt.Errorf("proto: wrong wireType = %d for field ImgUrl", wireType)
			}
			var stringLen uint64
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				stringLen |= uint64(b&0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			intStringLen := int(stringLen)
			if intStringLen < 0 {
				return ErrInvalidLengthProperty
			}
			postIndex := iNdEx + intStringLen
			if postIndex < 0 {
				return ErrInvalidLengthProperty
			}
			if postIndex > l {
				return io.ErrUnexpectedEOF
			}
			m.ImgUrl = string(dAtA[iNdEx:postIndex])
			iNdEx = postIndex
		default:
			iNdEx = preIndex
			skippy, err := skipProperty(dAtA[iNdEx:])
			if err != nil {
				return err
			}
			if (skippy < 0) || (iNdEx+skippy) < 0 {
				return ErrInvalidLengthProperty
			}
			if (iNdEx + skippy) > l {
				return io.ErrUnexpectedEOF
			}
			iNdEx += skippy
		}
	}

	if iNdEx > l {
		return io.ErrUnexpectedEOF
	}
	return nil
}
func skipProperty(dAtA []byte) (n int, err error) {
	l := len(dAtA)
	iNdEx := 0
	depth := 0
	for iNdEx < l {
		var wire uint64
		for shift := uint(0); ; shift += 7 {
			if shift >= 64 {
				return 0, ErrIntOverflowProperty
			}
			if iNdEx >= l {
				return 0, io.ErrUnexpectedEOF
			}
			b := dAtA[iNdEx]
			iNdEx++
			wire |= (uint64(b) & 0x7F) << shift
			if b < 0x80 {
				break
			}
		}
		wireType := int(wire & 0x7)
		switch wireType {
		case 0:
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return 0, ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return 0, io.ErrUnexpectedEOF
				}
				iNdEx++
				if dAtA[iNdEx-1] < 0x80 {
					break
				}
			}
		case 1:
			iNdEx += 8
		case 2:
			var length int
			for shift := uint(0); ; shift += 7 {
				if shift >= 64 {
					return 0, ErrIntOverflowProperty
				}
				if iNdEx >= l {
					return 0, io.ErrUnexpectedEOF
				}
				b := dAtA[iNdEx]
				iNdEx++
				length |= (int(b) & 0x7F) << shift
				if b < 0x80 {
					break
				}
			}
			if length < 0 {
				return 0, ErrInvalidLengthProperty
			}
			iNdEx += length
		case 3:
			depth++
		case 4:
			if depth == 0 {
				return 0, ErrUnexpectedEndOfGroupProperty
			}
			depth--
		case 5:
			iNdEx += 4
		default:
			return 0, fmt.Errorf("proto: illegal wireType %d", wireType)
		}
		if iNdEx < 0 {
			return 0, ErrInvalidLengthProperty
		}
		if depth == 0 {
			return iNdEx, nil
		}
	}
	return 0, io.ErrUnexpectedEOF
}

var (
	ErrInvalidLengthProperty        = fmt.Errorf("proto: negative length found during unmarshaling")
	ErrIntOverflowProperty          = fmt.Errorf("proto: integer overflow")
	ErrUnexpectedEndOfGroupProperty = fmt.Errorf("proto: unexpected end of group")
)
